--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "@experimental",
-    "react-dom": "@experimental",
+    "react": "^0.0.0-experimental-bdb4a96f-20250801",
+    "react-dom": "^0.0.0-experimental-bdb4a96f-20250801",
     "react-router": "^7.7.1"
   },
   "devDependencies": {
@@ -20,7 +20,7 @@
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "@experimental",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "prettier": "3.6.2",
