--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash.memoize": "^4.1.2",
     "react": "^0.0.0-experimental-bdb4a96f-20250801",
     "react-dom": "^0.0.0-experimental-bdb4a96f-20250801",
     "react-router": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/lodash.memoize": "^4.1.9",
     "@types/react": "@experimental",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
