--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "@experimental",
+    "eslint-plugin-react-hooks": "^0.0.0-experimental-3958d5d8-20250807",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "prettier": "3.6.2",
